Addon_Queries/DELETE/DELETE_Q/DELETE_Q/logs/hls_run_csim_10648.backup.log
INFO: [HLS 200-2005] Using work_dir /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/DELETE_Q 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.cpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.hpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q_Test.cpp' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file '/primary/PGSQL_Vitis/DELETE_Q/DELETE_Q_Test.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=delete_1' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(11)
INFO: [HLS 200-1465] Applying ini 'flow_target=vitis' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vitis'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_latency=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_alignment_byte_size=64
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_interface -m_axi_max_widen_bitwidth=512
INFO: [HLS 200-435] Setting 'open_solution -flow_target vitis' configuration: config_rtl -register_reset_num=3
INFO: [HLS 200-1465] Applying ini 'part=xcu50-fsvh2104-3-e' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xcu50-fsvh2104-3-e'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=0' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(10)
INFO: [HLS 200-1465] Applying ini 'package.output.format=xo' from /primary/PGSQL_Vitis/DELETE_Q/DELETE_Q/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../DELETE_Q_Test.cpp in debug mode
In file included from ../../../../../DELETE_Q_Test.cpp:1:
../../../../../DELETE_Q.hpp:79:1: error: templates must have C++ linkage
template <int HASHW, int COLW, int PW, int KeyW>
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../DELETE_Q.hpp:78:1: note: extern "C" language linkage specification begins here
extern "C" {
^
../../../../../DELETE_Q_Test.cpp:41:5: error: no matching function for call to 'delete_top'
    delete_top<32, 32, 128, 32>(i_hash_strm, i_col1_strm, i_col2_strm, i_col3_strm,
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [csim.mk:88: obj/DELETE_Q_Test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 14.24 seconds. Total CPU system time: 1.72 seconds. Total elapsed time: 15.54 seconds; peak allocated memory: 326.980 MB.
